rv-cloak added to hide lements while they render

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -13,7 +13,7 @@
         <div class="column l2 m2 l-right m-right">{{ 'cart.label.subtotal' | t }}</div>
       </div>
     </div>
-    <div class="container" id="CartItems" data-cart-view> 
+    <div class="container" id="CartItems" data-cart-view rv-cloak> 
       <div class="row l-table m-table" rv-each-item="cart.items">
         <div class="column l5 m5 s12">
           <strong><a rv-href="item.url">{ item.product_title }</a></strong>
