--- a/assets/app.js.liquid
+++ b/assets/app.js.liquid
@@ -98,6 +98,13 @@ concrete.init = function () {
     console.log("Rivets value: ", value);
     return el.href = "{{ shop.url }}" + value;
   }
+
+  rivets.binders.cloak = {
+    priority: -1000,
+    bind: function(el) {
+      el.style.opacity = 1;
+    }
+  }
 };
 
 // Get current window location
