--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -13,17 +13,17 @@
   <div class="row">
     <div class="column l6 m6 s12">
 
-      <div class="product-single__photos" id="ProductPhoto">
+      <div id="ProductPhoto">
         {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
-        <img src="{{ featured_image | img_url: 'large' }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg">
+        <img src="{{ featured_image | img_url: 'grande' }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg">
       </div>
 
       {% if product.images.size > 1 %}
-        <ul class="product-single__thumbnails grid-uniform" id="ProductThumbs">
+        <ul class="inline" id="ProductThumbs">
           {% for image in product.images %}
-            <li class="grid__item one-quarter">
-              <a href="{{ image.src | img_url: 'large' }}" class="product-single__thumbnail">
-                <img src="{{ image.src | img_url: 'compact' }}" alt="{{ image.alt | escape }}">
+            <li>
+              <a href="{{ image.src | img_url: 'grande' }}">
+                <img src="{{ image.src | img_url: 'thumbnail' }}" alt="{{ image.alt | escape }}">
               </a>
             </li>
           {% endfor %}
