--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -25,7 +25,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
 
-  {{ 'timber.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'app.scss.css' | asset_url | stylesheet_tag }}
   {{ 'gift-card.scss.css' | asset_url | stylesheet_tag }}
   {{ 'modernizr.gift-card.js' | shopify_asset_url | script_tag }}
   {{ 'vendor/qrcode.js' | shopify_asset_url | script_tag }}
