--- a/snippets/theme-gateway-icons.liquid
+++ b/snippets/theme-gateway-icons.liquid
@@ -11,7 +11,7 @@
           {% if icons %}
             {% include 'icon' with type %}
           {% else %}
-            {{ type | camelcase | replace:'_',' ' | prepend:'● ' }}
+            {{ type | camelcase | replace:'_',' ' }}
           {% endif %}
         </li>
       {% endif %}
