--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,29 +1,25 @@
 <!-- /templates/customers/reset_password.liquid -->
 
-<div class="grid">
-  <div class="grid__item large--one-third push--large--one-third text-center">
+<div class="container center">
 
-    <div class="form-vertical">
-      {% form 'reset_customer_password' %}
+  <div id="PasswordResetForm">
+    {% form 'reset_customer_password' %}
 
-        <h1>{{ 'customer.reset_password.title' | t }}</h1>
+      <h1>{{ 'account.reset_password.title' | t }}</h1>
 
-        <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
+      <p>{{ 'account.reset_password_message' | t: email: email }}</p>
 
-        {{ form.errors | default_errors }}
+      {{ form.errors | default_errors }}
 
-        <label for="ResetPassword" class="hidden-label">{{ 'customer.reset_password.password' | t }}</label>
-        <input type="password" value="" name="customer[password]" id="ResetPassword" class="input-full{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'customer.reset_password.password' | t }}">
+      <label for="ResetPassword" class="clearfix">{{ 'account.password' | t }}</label>
+      <input type="password" value="" name="customer[password]" id="ResetPassword" class="{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'account.password' | t }}">
 
-        <label for="PasswordConfirmation" class="hidden-label">{{ 'customer.reset_password.password_confirm' | t }}</label>
-        <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="input-full{% if form.errors contains 'password_confirmation' %} error{% endif %}" placeholder="{{ 'customer.reset_password.password_confirm' | t }}">
+      <label for="PasswordConfirmation" class="clearfix">{{ 'account.password_confirmation' | t }}</label>
+      <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="{% if form.errors contains 'password_confirmation' %} error{% endif %}" placeholder="{{ 'account.password_confirmation' | t }}">
 
-        <div class="text-center">
-          <input type="submit" class="btn btn--full" value="{{ 'customer.reset_password.submit' | t }}">
-        </div>
+      <p><input type="submit" value="{{ 'form.submit' | t }}"></p>
 
-      {% endform %}
-    </div>
-
+    {% endform %}
   </div>
+
 </div>
