--- a/snippets/account-sidebar.liquid
+++ b/snippets/account-sidebar.liquid
@@ -6,5 +6,5 @@
   <a href="/account/addresses" title="{{ 'account.address.manage_addresses' | t }}">
     {{ 'account.address.manage_addresses' | t }} ({{ customer.addresses_count }})
   </a></br>
-  <a href="/account" title="{{ 'account.orders.title' | t }}">{{ 'account.orders.title' | t }}</a>
+  <a href="/account" title="{{ 'account.orders.title' | t }}">{{ 'account.orders.title' | t }} ({{ customer.orders_count }})</a>
 </p>
