--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -255,7 +255,7 @@ h1, h2, h3, h4, h5, h6,
 h1, .h1 { font-size: 2.5rem; }
 h2, .h2 { font-size: 2rem; }
 h3, .h3 { font-size: 1.75rem; }
-h4, .h4 { font-size: 1.35rem; }
+h4, .h4 { font-size: 1.25rem; }
 h5, .h5 { font-size: 1rem; }
 h6, .h6 { font-size: 0.875rem; }
 
@@ -278,7 +278,7 @@ a {
 hr {
   border: 0;
   border-top: $borderWeight $borderStyle $colorAlternate;
-  margin: $gutter 0;
+  margin: $gutter/1.5 0;
 }
 
 strong {
@@ -306,6 +306,7 @@ input[type="tel"],
 input[type="password"],
 textarea {
   height: $gutter;
+  line-height: ($gutter - $borderWeight*2);
   padding: 0 $gutter/2;
   font-size: 1.125rem;
   border: $borderWeight $borderStyle $colorAlternate;
@@ -319,6 +320,7 @@ textarea {
 }
 textarea {
   height: initial;
+  line-height: $lineHeight;
   padding: $gutter/2;
 }
 label {
@@ -330,9 +332,9 @@ input[type="submit"],
 input[type="reset"],
 select {
   height: $gutter;
+  line-height: ($gutter - $borderWeight*2);
   padding: 0 $gutter/1.5;
   font-size: 1.125rem;
-  line-height: 2;
   color: lighten($colorBrand, 25%);
   background-color: $colorBrand;
   border: $borderWeight $borderStyle $colorBrand;
@@ -371,8 +373,7 @@ select {
   }
 }
 a.button {
-  display: table-cell;
-  vertical-align: middle;
+  display: inline-block;
   text-decoration: none;
 }
 .select-wrapper {
@@ -410,6 +411,9 @@ a.button {
 }
 .right {
   text-align: right;
+}
+.wide {
+  width: 100%;
 }
 .hidden {
   display: none;
@@ -701,7 +705,7 @@ form#CartPage {
     width: 400px;
   }
   p {
-    margin-bottom: 0;
+    margin-bottom: $gutter/3;
   }
   .cart-item {
     margin-bottom: $gutter/3;
@@ -713,7 +717,12 @@ form#CartPage {
   opacity: 0;
   @include transition();
 }
-
+body {
+  @include transition();
+  &.loading {
+    // Do something while the Ajax loads
+  }
+}
 
 /* =============================================================================
    Optional Extras
